--- a/app/src/main/res/layout/activity_main_alliance.xml
+++ b/app/src/main/res/layout/activity_main_alliance.xml
@@ -1,113 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical">
 
 
-    <!--<com.agrawalsuneet.dotsloader.basicviews.CircleView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:circleColor="@color/white"
-        app:circleDrawOnlystroke="true"
-        app:circleRadius="50dp"
-        app:circleStrokeWidth="20dp"/>-->
-
-
-    <!--<LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
+        <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:zee_animDuration="300"
-            app:zee_distanceMultiplier="3"
-            app:zee_dotsRadius="10dp"
-            app:zee_firstDotsColor="@color/red"
-            app:zee_secondDotsColor="@color/red_default" />
+            app:alliance_animDuration="500"
+            app:alliance_distanceMultiplier="4"
+            app:alliance_dotsRadius="8dp"
+            app:alliance_firstDotsColor="@color/red"
+            app:alliance_secondDotsColor="@color/red"
+            app:alliance_thirdDotsColor="@color/red" />
 
-        <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
+
+        <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:zee_animDuration="300"
-            app:zee_distanceMultiplier="3"
-            app:zee_dotsRadius="10dp"
-            app:zee_firstDotsColor="@color/amber"
-            app:zee_secondDotsColor="@color/amber_default" />
+            app:alliance_animDuration="500"
+            app:alliance_distanceMultiplier="4"
+            app:alliance_dotsRadius="8dp"
+            app:alliance_firstDotsColor="@color/amber"
+            app:alliance_secondDotsColor="@color/amber"
+            app:alliance_thirdDotsColor="@color/amber" />
 
 
-        <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
+        <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:zee_animDuration="300"
-            app:zee_distanceMultiplier="3"
-            app:zee_dotsRadius="10dp"
-            app:zee_firstDotsColor="@color/green"
-            app:zee_secondDotsColor="@color/green_default" />
+            app:alliance_animDuration="500"
+            app:alliance_distanceMultiplier="4"
+            app:alliance_dotsRadius="8dp"
+            app:alliance_firstDotsColor="@color/green"
+            app:alliance_secondDotsColor="@color/green"
+            app:alliance_thirdDotsColor="@color/green" />
 
     </LinearLayout>
-
-    <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:zee_animDuration="300"
-        app:zee_distanceMultiplier="4"
-        app:zee_dotsRadius="24dp"
-        app:zee_firstDotsColor="@color/blue_selected"
-        app:zee_secondDotsColor="@color/blue_delfault" />
-
-    <com.agrawalsuneet.dotsloader.loaders.ZeeLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:zee_animDuration="300"
-        app:zee_distanceMultiplier="3"
-        app:zee_dotsRadius="10dp"
-        app:zee_firstDotsColor="@color/grey"
-        app:zee_secondDotsColor="@color/grey_default" />-->
-
-
-    <!--<RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="300dp">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="Button 1" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:text="Button 2" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:text="Button 3" />
-    </RelativeLayout>-->
 
 
     <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:alliance_animDuration="500"
+        app:alliance_distanceMultiplier="4"
+        app:alliance_dotsRadius="20dp"
+        app:alliance_drawOnlyStroke="true"
+        app:alliance_firstDotsColor="@color/red"
+        app:alliance_secondDotsColor="@color/amber"
+        app:alliance_strokeWidth="8dp"
+        app:alliance_thirdDotsColor="@color/green" />
+
+
+    <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:alliance_animDuration="500"
+        app:alliance_distanceMultiplier="4"
+        app:alliance_dotsRadius="16dp"
+        app:alliance_drawOnlyStroke="true"
+        app:alliance_firstDotsColor="@color/blue_selected"
+        app:alliance_secondDotsColor="@color/blue_selected"
+        app:alliance_strokeWidth="6dp"
+        app:alliance_thirdDotsColor="@color/blue_selected" />
 
 
 </LinearLayout>
