--- a/app/src/main/res/layout/activity_main_alliance.xml
+++ b/app/src/main/res/layout/activity_main_alliance.xml
@@ -1,20 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:gravity="center"
-    android:orientation="vertical">
-
+    android:fillViewport="true">
 
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:background="@color/white"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:alliance_animDuration="500"
+                app:alliance_distanceMultiplier="4"
+                app:alliance_dotsRadius="8dp"
+                app:alliance_firstDotsColor="@color/red"
+                app:alliance_secondDotsColor="@color/red"
+                app:alliance_thirdDotsColor="@color/red" />
+
+
+            <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:alliance_animDuration="500"
+                app:alliance_distanceMultiplier="4"
+                app:alliance_dotsRadius="8dp"
+                app:alliance_firstDotsColor="@color/amber"
+                app:alliance_secondDotsColor="@color/amber"
+                app:alliance_thirdDotsColor="@color/amber" />
+
+
+            <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:alliance_animDuration="500"
+                app:alliance_distanceMultiplier="4"
+                app:alliance_dotsRadius="8dp"
+                app:alliance_firstDotsColor="@color/green"
+                app:alliance_secondDotsColor="@color/green"
+                app:alliance_thirdDotsColor="@color/green" />
+
+        </LinearLayout>
+
 
         <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
             android:layout_width="wrap_content"
@@ -22,22 +65,12 @@
             android:layout_margin="16dp"
             app:alliance_animDuration="500"
             app:alliance_distanceMultiplier="4"
-            app:alliance_dotsRadius="8dp"
+            app:alliance_dotsRadius="20dp"
+            app:alliance_drawOnlyStroke="true"
             app:alliance_firstDotsColor="@color/red"
-            app:alliance_secondDotsColor="@color/red"
-            app:alliance_thirdDotsColor="@color/red" />
-
-
-        <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:alliance_animDuration="500"
-            app:alliance_distanceMultiplier="4"
-            app:alliance_dotsRadius="8dp"
-            app:alliance_firstDotsColor="@color/amber"
             app:alliance_secondDotsColor="@color/amber"
-            app:alliance_thirdDotsColor="@color/amber" />
+            app:alliance_strokeWidth="8dp"
+            app:alliance_thirdDotsColor="@color/green" />
 
 
         <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
@@ -46,40 +79,14 @@
             android:layout_margin="16dp"
             app:alliance_animDuration="500"
             app:alliance_distanceMultiplier="4"
-            app:alliance_dotsRadius="8dp"
-            app:alliance_firstDotsColor="@color/green"
-            app:alliance_secondDotsColor="@color/green"
-            app:alliance_thirdDotsColor="@color/green" />
+            app:alliance_dotsRadius="16dp"
+            app:alliance_drawOnlyStroke="true"
+            app:alliance_firstDotsColor="@color/blue_selected"
+            app:alliance_secondDotsColor="@color/blue_selected"
+            app:alliance_strokeWidth="6dp"
+            app:alliance_thirdDotsColor="@color/blue_selected" />
+
 
     </LinearLayout>
 
-
-    <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:alliance_animDuration="500"
-        app:alliance_distanceMultiplier="4"
-        app:alliance_dotsRadius="20dp"
-        app:alliance_drawOnlyStroke="true"
-        app:alliance_firstDotsColor="@color/red"
-        app:alliance_secondDotsColor="@color/amber"
-        app:alliance_strokeWidth="8dp"
-        app:alliance_thirdDotsColor="@color/green" />
-
-
-    <com.agrawalsuneet.dotsloader.loaders.AllianceLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:alliance_animDuration="500"
-        app:alliance_distanceMultiplier="4"
-        app:alliance_dotsRadius="16dp"
-        app:alliance_drawOnlyStroke="true"
-        app:alliance_firstDotsColor="@color/blue_selected"
-        app:alliance_secondDotsColor="@color/blue_selected"
-        app:alliance_strokeWidth="6dp"
-        app:alliance_thirdDotsColor="@color/blue_selected" />
-
-
-</LinearLayout>
+</ScrollView>
