--- a/app/src/main/res/layout/activity_main_lineardotsloader.xml
+++ b/app/src/main/res/layout/activity_main_lineardotsloader.xml
@@ -15,65 +15,65 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        app:loader_animDur="800"
-        app:loader_circleRadius="12dp"
-        app:loader_dotsDist="8dp"
-        app:loader_expandOnSelect="true"
-        app:loader_isSingleDir="true"
-        app:loader_noOfDots="5"
-        app:loader_selectedRadius="16dp"
-        app:loader_showRunningShadow="false" />
+        app:linear_animDur="800"
+        app:linear_circleRadius="12dp"
+        app:linear_dotsDist="8dp"
+        app:linear_expandOnSelect="true"
+        app:linear_isSingleDir="true"
+        app:linear_noOfDots="5"
+        app:linear_selectedRadius="16dp"
+        app:linear_showRunningShadow="false" />
 
     <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        app:loader_animDur="100"
-        app:loader_circleRadius="12dp"
-        app:loader_dotsDist="6dp"
-        app:loader_isSingleDir="false"
-        app:loader_noOfDots="8"
-        app:loader_selectedRadius="16dp" />
+        app:linear_animDur="100"
+        app:linear_circleRadius="12dp"
+        app:linear_dotsDist="6dp"
+        app:linear_isSingleDir="false"
+        app:linear_noOfDots="8"
+        app:linear_selectedRadius="16dp" />
 
     <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        app:loader_animDur="500"
-        app:loader_circleRadius="14dp"
-        app:loader_defaultColor="@color/pink_default"
-        app:loader_dotsDist="4dp"
-        app:loader_expandOnSelect="true"
-        app:loader_isSingleDir="false"
-        app:loader_noOfDots="6"
-        app:loader_selectedColor="@color/pink_selected"
-        app:loader_selectedRadius="16dp" />
+        app:linear_animDur="500"
+        app:linear_circleRadius="14dp"
+        app:linear_defaultColor="@color/pink_default"
+        app:linear_dotsDist="4dp"
+        app:linear_expandOnSelect="true"
+        app:linear_isSingleDir="false"
+        app:linear_noOfDots="6"
+        app:linear_selectedColor="@color/pink_selected"
+        app:linear_selectedRadius="16dp" />
 
     <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        app:loader_circleRadius="12dp"
-        app:loader_defaultColor="@color/blue_delfault"
-        app:loader_dotsDist="6dp"
-        app:loader_isSingleDir="true"
-        app:loader_showRunningShadow="false"
-        app:loader_selectedColor="@color/blue_selected" />
+        app:linear_circleRadius="12dp"
+        app:linear_defaultColor="@color/blue_delfault"
+        app:linear_dotsDist="6dp"
+        app:linear_isSingleDir="true"
+        app:linear_showRunningShadow="false"
+        app:linear_selectedColor="@color/blue_selected" />
 
     <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        app:loader_circleRadius="8dp"
-        app:loader_defaultColor="@color/purple_default"
-        app:loader_dotsDist="6dp"
-        app:loader_isSingleDir="true"
-        app:loader_noOfDots="8"
-        app:loader_animDur="100"
-        app:loader_selectedColor="@color/purple_selected" />
+        app:linear_circleRadius="8dp"
+        app:linear_defaultColor="@color/purple_default"
+        app:linear_dotsDist="6dp"
+        app:linear_isSingleDir="true"
+        app:linear_noOfDots="8"
+        app:linear_animDur="100"
+        app:linear_selectedColor="@color/purple_selected" />
 
 </LinearLayout>
