--- a/dotsloader/src/main/res/values/attrs.xml
+++ b/dotsloader/src/main/res/values/attrs.xml
@@ -16,21 +16,12 @@
     </declare-styleable>
 
     <declare-styleable name="LinearDotsLoader">
-        <attr name="linear_defaultColor" format="color" />
-        <attr name="linear_selectedColor" format="color" />
-        <attr name="linear_circleRadius" format="dimension" />
-        <attr name="linear_animDur" format="integer" />
-        <attr name="linear_showRunningShadow" format="boolean" />
-        <attr name="linear_firstShadowColor" format="color" />
-        <attr name="linear_secondShadowColor" format="color" />
-
-        <attr name="linear_noOfDots" format="integer" />
-        <attr name="linear_dotsDist" format="dimension" />
-        <attr name="linear_isSingleDir" format="boolean" />
-        <attr name="linear_expandOnSelect" format="boolean" />
-        <attr name="linear_selectedRadius" format="dimension" />
+        <attr name="loader_noOfDots" format="integer" />
+        <attr name="loader_dotsDist" format="dimension" />
+        <attr name="loader_isSingleDir" format="boolean" />
+        <attr name="loader_expandOnSelect" format="boolean" />
+        <attr name="loader_selectedRadius" format="dimension" />
     </declare-styleable>
-
 
 
     <declare-styleable name="CircleView">
