--- a/app/src/main/res/layout/main_bounce.xml
+++ b/app/src/main/res/layout/main_bounce.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -9,9 +10,61 @@
     android:orientation="vertical"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+
+        <com.agrawalsuneet.dotsloader.loaders.BounceLoader
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:bounce_animDuration="1500"
+            app:bounce_ballColor="@color/red"
+            app:bounce_ballRadius="16dp"
+            app:bounce_showShadow="false" />
+
+        <com.agrawalsuneet.dotsloader.loaders.BounceLoader
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:bounce_animDuration="1500"
+            app:bounce_ballColor="@color/amber"
+            app:bounce_ballRadius="16dp"
+            app:bounce_showShadow="false" />
+
+        <com.agrawalsuneet.dotsloader.loaders.BounceLoader
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:bounce_animDuration="1500"
+            app:bounce_ballColor="@color/green"
+            app:bounce_ballRadius="16dp"
+            app:bounce_showShadow="false" />
+
+
+    </LinearLayout>
+
     <com.agrawalsuneet.dotsloader.loaders.BounceLoader
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:bounce_animDuration="1000"
+        app:bounce_ballColor="@color/blue_selected"
+        app:bounce_ballRadius="22dp"
+        app:bounce_shadowColor="@color/black"
+        app:bounce_showShadow="true" />
 
+
+    <com.agrawalsuneet.dotsloader.loaders.BounceLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:bounce_animDuration="1200"
+        app:bounce_ballColor="@color/violet"
+        app:bounce_ballRadius="18dp"
+        app:bounce_shadowColor="@color/black"
+        app:bounce_showShadow="true" />
 
 </LinearLayout>
