remove unused loaders

--- a/app/src/main/res/layout/main_lineardotsloader.xml
+++ b/app/src/main/res/layout/main_lineardotsloader.xml
@@ -10,70 +10,82 @@
     android:orientation="vertical"
     tools:context="com.agrawalsuneet.loaders.MainActivity">
 
-    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        app:loader_animDur="800"
-        app:loader_circleRadius="12dp"
-        app:loader_dotsDist="8dp"
-        app:loader_expandOnSelect="true"
-        app:loader_isSingleDir="true"
-        app:loader_noOfDots="5"
-        app:loader_selectedRadius="16dp"
-        app:loader_showRunningShadow="false" />
+<!--    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:loader_animDur="800"-->
+<!--        app:loader_circleRadius="12dp"-->
+<!--        app:loader_dotsDist="8dp"-->
+<!--        app:loader_expandOnSelect="true"-->
+<!--        app:loader_isSingleDir="true"-->
+<!--        app:loader_noOfDots="5"-->
+<!--        app:loader_selectedRadius="16dp"-->
+<!--        app:loader_showRunningShadow="false" />-->
 
-    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        app:loader_animDur="100"
-        app:loader_circleRadius="12dp"
-        app:loader_dotsDist="6dp"
-        app:loader_isSingleDir="false"
-        app:loader_noOfDots="8"
-        app:loader_selectedRadius="16dp" />
+<!--    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:loader_animDur="100"-->
+<!--        app:loader_circleRadius="12dp"-->
+<!--        app:loader_dotsDist="6dp"-->
+<!--        app:loader_isSingleDir="false"-->
+<!--        app:loader_noOfDots="8"-->
+<!--        app:loader_selectedRadius="16dp" />-->
 
-    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        app:loader_animDur="500"
-        app:loader_circleRadius="14dp"
-        app:loader_defaultColor="@color/pink_default"
-        app:loader_dotsDist="4dp"
-        app:loader_expandOnSelect="true"
-        app:loader_isSingleDir="false"
-        app:loader_noOfDots="6"
-        app:loader_selectedColor="@color/pink_selected"
-        app:loader_selectedRadius="16dp" />
+<!--    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:loader_animDur="500"-->
+<!--        app:loader_circleRadius="14dp"-->
+<!--        app:loader_defaultColor="@color/pink_default"-->
+<!--        app:loader_dotsDist="4dp"-->
+<!--        app:loader_expandOnSelect="true"-->
+<!--        app:loader_isSingleDir="false"-->
+<!--        app:loader_noOfDots="6"-->
+<!--        app:loader_selectedColor="@color/pink_selected"-->
+<!--        app:loader_selectedRadius="16dp" />-->
 
-    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        app:loader_circleRadius="12dp"
-        app:loader_defaultColor="@color/blue_delfault"
-        app:loader_dotsDist="6dp"
-        app:loader_isSingleDir="true"
-        app:loader_showRunningShadow="false"
-        app:loader_selectedColor="@color/blue_selected" />
+<!--    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:loader_circleRadius="12dp"-->
+<!--        app:loader_defaultColor="@color/blue_delfault"-->
+<!--        app:loader_dotsDist="6dp"-->
+<!--        app:loader_isSingleDir="true"-->
+<!--        app:loader_showRunningShadow="false"-->
+<!--        app:loader_selectedColor="@color/blue_selected" />-->
 
-    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader
+<!--    <com.agrawalsuneet.dotsloader.loaders.LinearDotsLoader-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:loader_circleRadius="8dp"-->
+<!--        app:loader_defaultColor="@color/purple_default"-->
+<!--        app:loader_dotsDist="6dp"-->
+<!--        app:loader_isSingleDir="true"-->
+<!--        app:loader_noOfDots="8"-->
+<!--        app:loader_animDur="100"-->
+<!--        app:loader_selectedColor="@color/purple_selected" />-->
+
+    <com.agrawalsuneet.dotsloader.loaders.LazyLoader
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        app:loader_circleRadius="8dp"
-        app:loader_defaultColor="@color/purple_default"
-        app:loader_dotsDist="6dp"
-        app:loader_isSingleDir="true"
-        app:loader_noOfDots="8"
-        app:loader_animDur="100"
-        app:loader_selectedColor="@color/purple_selected" />
+        app:lazyloader_dotsRadius="4dp"
+        app:lazyloader_dotsDist="3dp"
+        app:lazyloader_animDur="250"
+        app:lazyloader_firstDelayDur="100"
+        app:lazyloader_secondDelayDur="200"
+        app:lazyloader_firstDotColor="#273e71"
+        app:lazyloader_secondDotColor="#273e71"
+        app:lazyloader_thirdDotColor="#273e71"/>
 
 </LinearLayout>
